commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -8,12 +8,12 @@ ms.date: 11/12/2019
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 2c1d2288a5f3768623ad2f13371f9b91e80dd473
-ms.sourcegitcommit: 3fc3020961e1289ee5bf5f3c365ce8304d8ebf19
+ms.openlocfilehash: e8f22c3e7b82b84afe513bf495ff5a46a527bb73
+ms.sourcegitcommit: 231780c8d7848943e5e9fd55e93f437f7e5a371d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/12/2019
-ms.locfileid: "73963694"
+ms.lasthandoff: 11/15/2019
+ms.locfileid: "74116068"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -427,7 +427,7 @@ Pour plus d’informations, consultez [put Request queues in a distinct collecti
 
 `AllowSynchronousIO` active ou désactive les API d’e/s synchrones, telles que `HttpRequest.Body.Read`, `HttpResponse.Body.Write` et `Stream.Flush`. Ces API sont une source de privation de thread conduisant à des blocages d’application. Dans 3,0, `AllowSynchronousIO` est désactivé par défaut. Pour plus d’informations, consultez [la section e/s synchrone dans l’article Kestrel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#synchronous-io).
 
-Outre l’activation de `AllowSynchronousIO` avec les options de `ConfigureKestrel`, les e/s synchrones peuvent également être remplacées par demande comme une atténuation temporaire :
+Si des e/s synchrones sont nécessaires, vous pouvez les activer en configurant l’option `AllowSynchronousIO` sur le serveur utilisé (lors de l’appel de `ConfigureKestrel`, par exemple, si vous utilisez Kestrel). Notez que les serveurs (Kestrel, HttpSys, TestServer, etc.) ont leur propre `AllowSynchronousIO` option qui n’affectera pas les autres serveurs. Les e/s synchrones peuvent être activées pour tous les serveurs par demande à l’aide de l’option `IHttpBodyControlFeature.AllowSynchronousIO` :
 
 ```csharp
 var syncIOFeature = HttpContext.Features.Get<IHttpBodyControlFeature>();
@@ -843,6 +843,12 @@ public void Configure(IApplicationBuilder app)
 
 La protection est implémentée pour certains scénarios. L’intergiciel (middleware) de points de terminaison lève une exception si une stratégie d’autorisation ou CORS est ignorée en raison d’un intergiciel (middleware) manquant. La prise en charge de l’analyseur pour fournir des commentaires supplémentaires sur une configuration incompatible est en cours.
 
+#### <a name="custom-authorization-handlers"></a>Gestionnaires d’autorisations personnalisés
+
+Si l’application utilise des [gestionnaires d’autorisations](xref:security/authorization/policies#authorization-handlers)personnalisés, sachez que le routage des points de terminaison passe un type de ressource différent aux gestionnaires que Mvc. Les gestionnaires qui attendent que la ressource de contexte du gestionnaire d’autorisations soit de type <xref:Microsoft.AspNetCore.Mvc.Filters.AuthorizationFilterContext> (le type de ressource [fourni par les filtres MVC](xref:security/authorization/policies#accessing-mvc-request-context-in-handlers)) doivent être mis à jour pour gérer les ressources de type <xref:Microsoft.AspNetCore.Routing.RouteEndpoint> (le type de ressource donné aux gestionnaires d’autorisation par routage de point de terminaison).
+
+MVC utilise toujours `AuthorizationFilterContext` ressources. ainsi, si l’application utilise des filtres d’autorisation MVC avec l’autorisation de routage de point de terminaison, il peut être nécessaire de gérer les deux types de ressources.
+
 ### SignalR
 
 Le mappage de SignalR hubs s’effectue désormais dans `UseEndpoints`.
@@ -954,6 +960,14 @@ Cette modification n’affecte pas les noms spécifiés à l’aide de l’attri
 services.AddMvc(options =>
     options.SuppressAsyncSuffixInActionNames = false);
 ```
+
+#### <a name="changes-to-link-generation"></a>Modifications apportées à la génération de liens
+
+Comme expliqué dans la documentation sur les [différences par rapport aux versions antérieures du routage](xref:fundamentals/routing#differences-from-earlier-versions-of-routing), il existe quelques différences dans la génération de liens (à l’aide de `Url.Link` et d’API similaires, par exemple). Elles incluent notamment les suivantes :
+
+* Par défaut, lors de l’utilisation du routage de point de terminaison, la casse des paramètres d’itinéraire dans les URI générés n’est pas nécessairement préservée. Ce comportement peut être contrôlé à l’aide de l’interface `IOutboundParameterTransformer`.
+* La génération d’un URI pour un itinéraire non valide (un contrôleur/une action ou une page qui n’existe pas) produira une chaîne vide sous le routage de point de terminaison au lieu de produire un URI non valide.
+* Les valeurs ambiantes (paramètres d’itinéraire du contexte actuel) ne sont pas utilisées automatiquement dans la génération de liens avec le routage de point de terminaison. Précédemment, lors de la génération d’un lien vers une autre action (ou page), les valeurs d’itinéraire non spécifiées seraient déduites des valeurs ambiantes des itinéraires *actuels* . Lorsque vous utilisez le routage de point de terminaison, tous les paramètres de routage doivent être spécifiés explicitement lors de la génération de liens.
 
 ### <a name="razor-pages"></a>Pages Razor
 
@@ -1224,6 +1238,7 @@ Examiner les modifications avec rupture :
 * [Liste complète des modifications avec rupture dans la version ASP.NET Core 3,0](https://github.com/aspnet/Announcements/issues?page=2&q=is%3Aissue+is%3Aopen+label%3A%22Breaking+change%22+label%3A3.0.0)
 * [Interruption des modifications d’API dans anti-contrefaçon, cors, diagnostics, MVC et routage](https://github.com/aspnet/Announcements/issues/387). Cette liste comprend les modifications avec rupture pour les commutateurs de compatibilité.
 * Pour obtenir un résumé des modifications avec rupture 2,2 à 3,0 sur .NET Core, ASP.NET Core et Entity Framework Core, consultez [modifications avec rupture pour la migration de la version 2,2 vers 3,0](/dotnet/core/compatibility/2.2-3.0).
+* [Certains paramètres par défaut de SameSite de cookie sont devenus None (ASPNET/announcements #348)](https://github.com/aspnet/Announcements/issues/348).
 
 ## <a name="net-core-30-on-azure-app-service"></a>.NET Core 3,0 sur Azure App Service
 
