--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -4,53 +4,53 @@ author: scottaddie
 description: Découvrez comment migrer un projet ASP.NET Core 3,0 vers ASP.NET Core 3,1.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/26/2019
+ms.date: 12/03/2019
 uid: migration/30-to-31
-ms.openlocfilehash: 4e82b870439ed301bb5198d6965d9af2f44a7f9f
-ms.sourcegitcommit: 918d7000b48a2892750264b852bad9e96a1165a7
+ms.openlocfilehash: 497f5da7a29d5cdb8b4264c87330e8a464380bf8
+ms.sourcegitcommit: 169ea5116de729c803685725d96450a270bc55b7
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/27/2019
-ms.locfileid: "74551612"
+ms.lasthandoff: 12/03/2019
+ms.locfileid: "74733945"
 ---
-# <a name="migrate-from-aspnet-core-30-to-31"></a><span data-ttu-id="f680a-103">Migrer de ASP.NET Core 3,0 à 3,1</span><span class="sxs-lookup"><span data-stu-id="f680a-103">Migrate from ASP.NET Core 3.0 to 3.1</span></span>
+# <a name="migrate-from-aspnet-core-30-to-31"></a><span data-ttu-id="c8a20-103">Migrer de ASP.NET Core 3,0 à 3,1</span><span class="sxs-lookup"><span data-stu-id="c8a20-103">Migrate from ASP.NET Core 3.0 to 3.1</span></span>
 
-<span data-ttu-id="f680a-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="f680a-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="c8a20-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="c8a20-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="f680a-105">Cet article explique comment mettre à jour un projet ASP.NET Core 3,0 existant vers ASP.NET Core 3,1.</span><span class="sxs-lookup"><span data-stu-id="f680a-105">This article explains how to update an existing ASP.NET Core 3.0 project to ASP.NET Core 3.1.</span></span>
+<span data-ttu-id="c8a20-105">Cet article explique comment mettre à jour un projet ASP.NET Core 3,0 existant vers ASP.NET Core 3,1.</span><span class="sxs-lookup"><span data-stu-id="c8a20-105">This article explains how to update an existing ASP.NET Core 3.0 project to ASP.NET Core 3.1.</span></span>
 
-## <a name="prerequisites"></a><span data-ttu-id="f680a-106">Configuration requise</span><span class="sxs-lookup"><span data-stu-id="f680a-106">Prerequisites</span></span>
+## <a name="prerequisites"></a><span data-ttu-id="c8a20-106">Configuration requise</span><span class="sxs-lookup"><span data-stu-id="c8a20-106">Prerequisites</span></span>
 
-# <a name="visual-studiotabvisual-studio"></a>[<span data-ttu-id="f680a-107">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="f680a-107">Visual Studio</span></span>](#tab/visual-studio)
+# <a name="visual-studiotabvisual-studio"></a>[<span data-ttu-id="c8a20-107">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="c8a20-107">Visual Studio</span></span>](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-3.1.md)]
 
-# <a name="visual-studio-codetabvisual-studio-code"></a>[<span data-ttu-id="f680a-108">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="f680a-108">Visual Studio Code</span></span>](#tab/visual-studio-code)
+# <a name="visual-studio-codetabvisual-studio-code"></a>[<span data-ttu-id="c8a20-108">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="c8a20-108">Visual Studio Code</span></span>](#tab/visual-studio-code)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vsc-3.1.md)]
 
-# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[<span data-ttu-id="f680a-109">Visual Studio pour Mac</span><span class="sxs-lookup"><span data-stu-id="f680a-109">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
+# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[<span data-ttu-id="c8a20-109">Visual Studio pour Mac</span><span class="sxs-lookup"><span data-stu-id="c8a20-109">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-3.1.md)]
 
 ---
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="f680a-110">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="f680a-110">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="c8a20-110">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="c8a20-110">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="f680a-111">Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` sur la version 3,1 du kit de développement logiciel (SDK) installée.</span><span class="sxs-lookup"><span data-stu-id="f680a-111">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the 3.1 SDK version that's installed.</span></span> <span data-ttu-id="f680a-112">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="f680a-112">For example:</span></span>
+<span data-ttu-id="c8a20-111">Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` sur la version 3,1 du kit de développement logiciel (SDK) installée.</span><span class="sxs-lookup"><span data-stu-id="c8a20-111">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the 3.1 SDK version that's installed.</span></span> <span data-ttu-id="c8a20-112">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="c8a20-112">For example:</span></span>
 
 ```diff
 {
   "sdk": {
 -    "version": "3.0.101"
-+    "version": "3.1.100-preview3-014645"
++    "version": "3.1.100"
   }
 }
 ```
 
-## <a name="update-the-target-framework"></a><span data-ttu-id="f680a-113">Mettre à jour la version cible de .NET Framework</span><span class="sxs-lookup"><span data-stu-id="f680a-113">Update the target framework</span></span>
+## <a name="update-the-target-framework"></a><span data-ttu-id="c8a20-113">Mettre à jour la version cible de .NET Framework</span><span class="sxs-lookup"><span data-stu-id="c8a20-113">Update the target framework</span></span>
 
-<span data-ttu-id="f680a-114">Dans le fichier projet, mettez à jour le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) pour `netcoreapp3.1`:</span><span class="sxs-lookup"><span data-stu-id="f680a-114">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp3.1`:</span></span>
+<span data-ttu-id="c8a20-114">Dans le fichier projet, mettez à jour le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) pour `netcoreapp3.1`:</span><span class="sxs-lookup"><span data-stu-id="c8a20-114">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp3.1`:</span></span>
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -63,49 +63,50 @@ ms.locfileid: "74551612"
 </Project>
 ```
 
-## <a name="update-package-references"></a><span data-ttu-id="f680a-115">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="f680a-115">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="c8a20-115">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="c8a20-115">Update package references</span></span>
 
-<span data-ttu-id="f680a-116">Dans le fichier projet, mettez à jour chaque attribut `Version` de référence de package `Microsoft.AspNetCore.*` en 3.1.0 ou ultérieur.</span><span class="sxs-lookup"><span data-stu-id="f680a-116">In the project file, update each `Microsoft.AspNetCore.*` package reference's `Version` attribute to 3.1.0 or later.</span></span> <span data-ttu-id="f680a-117">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="f680a-117">For example:</span></span>
+<span data-ttu-id="c8a20-116">Dans le fichier projet, mettez à jour chaque attribut `Version` de référence de package `Microsoft.AspNetCore.*` en 3.1.0 ou ultérieur.</span><span class="sxs-lookup"><span data-stu-id="c8a20-116">In the project file, update each `Microsoft.AspNetCore.*` package reference's `Version` attribute to 3.1.0 or later.</span></span> <span data-ttu-id="c8a20-117">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="c8a20-117">For example:</span></span>
 
 ```diff
 <ItemGroup>
 -    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
 -    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" Condition="'$(Configuration)' == 'Debug'" />
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0-preview3.19555.2" />
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0-preview3.19555.2" Condition="'$(Configuration)' == 'Debug'" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" Condition="'$(Configuration)' == 'Debug'" />
 </ItemGroup>
 ```
 
-## <a name="update-docker-images"></a><span data-ttu-id="f680a-118">Mettre à jour les images de l’ancrage</span><span class="sxs-lookup"><span data-stu-id="f680a-118">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="c8a20-118">Mettre à jour les images de l’ancrage</span><span class="sxs-lookup"><span data-stu-id="c8a20-118">Update Docker images</span></span>
 
-<span data-ttu-id="f680a-119">Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 3,1.</span><span class="sxs-lookup"><span data-stu-id="f680a-119">For apps using Docker, use a base image that includes ASP.NET Core 3.1.</span></span> <span data-ttu-id="f680a-120">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="f680a-120">For example:</span></span>
+<span data-ttu-id="c8a20-119">Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 3,1.</span><span class="sxs-lookup"><span data-stu-id="c8a20-119">For apps using Docker, use a base image that includes ASP.NET Core 3.1.</span></span> <span data-ttu-id="c8a20-120">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="c8a20-120">For example:</span></span>
 
 ```console
 docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
 ```
 
-## <a name="react-to-samesite-cookie-changes"></a><span data-ttu-id="f680a-121">Réagir aux changements de cookie SameSite</span><span class="sxs-lookup"><span data-stu-id="f680a-121">React to SameSite cookie changes</span></span>
+## <a name="react-to-samesite-cookie-changes"></a><span data-ttu-id="c8a20-121">Réagir aux changements de cookie SameSite</span><span class="sxs-lookup"><span data-stu-id="c8a20-121">React to SameSite cookie changes</span></span>
 
-<span data-ttu-id="f680a-122">Les implémentations d’attribut `SameSite` pour les cookies HTTP ont changé entre ASP.NET Core 3,0 et 3,1.</span><span class="sxs-lookup"><span data-stu-id="f680a-122">The `SameSite` attribute implementations for HTTP cookies changed between ASP.NET Core 3.0 and 3.1.</span></span> <span data-ttu-id="f680a-123">Pour les actions à effectuer, consultez les ressources suivantes :</span><span class="sxs-lookup"><span data-stu-id="f680a-123">For actions to be taken, see the following resources:</span></span>
+<span data-ttu-id="c8a20-122">Les implémentations d’attribut `SameSite` pour les cookies HTTP ont changé entre ASP.NET Core 3,0 et 3,1.</span><span class="sxs-lookup"><span data-stu-id="c8a20-122">The `SameSite` attribute implementations for HTTP cookies changed between ASP.NET Core 3.0 and 3.1.</span></span> <span data-ttu-id="c8a20-123">Pour les actions à effectuer, consultez les ressources suivantes :</span><span class="sxs-lookup"><span data-stu-id="c8a20-123">For actions to be taken, see the following resources:</span></span>
 
-* [<span data-ttu-id="f680a-124">ASPNET/announcements # 390</span><span class="sxs-lookup"><span data-stu-id="f680a-124">aspnet/Announcements#390</span></span>](https://github.com/aspnet/Announcements/issues/390)
-* [<span data-ttu-id="f680a-125">Modifications de cookie SameSite à venir dans ASP.NET et ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="f680a-125">Upcoming SameSite cookie changes in ASP.NET and ASP.NET Core</span></span>](https://devblogs.microsoft.com/aspnet/upcoming-samesite-cookie-changes-in-asp-net-and-asp-net-core/)
+* <xref:security/samesite>
+* [<span data-ttu-id="c8a20-124">ASPNET/announcements # 390</span><span class="sxs-lookup"><span data-stu-id="c8a20-124">aspnet/Announcements#390</span></span>](https://github.com/aspnet/Announcements/issues/390)
+* [<span data-ttu-id="c8a20-125">Modifications de cookie SameSite à venir dans ASP.NET et ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="c8a20-125">Upcoming SameSite cookie changes in ASP.NET and ASP.NET Core</span></span>](https://devblogs.microsoft.com/aspnet/upcoming-samesite-cookie-changes-in-asp-net-and-asp-net-core/)
 
-## <a name="review-breaking-changes"></a><span data-ttu-id="f680a-126">Examiner les modifications avec rupture</span><span class="sxs-lookup"><span data-stu-id="f680a-126">Review breaking changes</span></span>
+## <a name="review-breaking-changes"></a><span data-ttu-id="c8a20-126">Examiner les modifications avec rupture</span><span class="sxs-lookup"><span data-stu-id="c8a20-126">Review breaking changes</span></span>
 
-<span data-ttu-id="f680a-127">Passez en revue les modifications avec rupture 3,0 à 3,1 sur .NET Core, ASP.NET Core et Entity Framework Core lors [des dernières modifications pour la migration de la version 3,0 vers 3,1](/dotnet/core/compatibility/3.0-3.1).</span><span class="sxs-lookup"><span data-stu-id="f680a-127">Review 3.0-to-3.1 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.0 to 3.1](/dotnet/core/compatibility/3.0-3.1).</span></span>
+<span data-ttu-id="c8a20-127">Passez en revue les modifications avec rupture 3,0 à 3,1 sur .NET Core, ASP.NET Core et Entity Framework Core lors [des dernières modifications pour la migration de la version 3,0 vers 3,1](/dotnet/core/compatibility/3.0-3.1).</span><span class="sxs-lookup"><span data-stu-id="c8a20-127">Review 3.0-to-3.1 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.0 to 3.1](/dotnet/core/compatibility/3.0-3.1).</span></span>
 
-## <a name="optional-changes"></a><span data-ttu-id="f680a-128">Modifications facultatives</span><span class="sxs-lookup"><span data-stu-id="f680a-128">Optional changes</span></span>
+## <a name="optional-changes"></a><span data-ttu-id="c8a20-128">Modifications facultatives</span><span class="sxs-lookup"><span data-stu-id="c8a20-128">Optional changes</span></span>
 
-<span data-ttu-id="f680a-129">Les modifications suivantes sont facultatives.</span><span class="sxs-lookup"><span data-stu-id="f680a-129">The following changes are optional.</span></span>
+<span data-ttu-id="c8a20-129">Les modifications suivantes sont facultatives.</span><span class="sxs-lookup"><span data-stu-id="c8a20-129">The following changes are optional.</span></span>
 
-### <a name="use-the-component-tag-helper"></a><span data-ttu-id="f680a-130">Utiliser le tag Helper Component</span><span class="sxs-lookup"><span data-stu-id="f680a-130">Use the Component Tag Helper</span></span>
+### <a name="use-the-component-tag-helper"></a><span data-ttu-id="c8a20-130">Utiliser le tag Helper Component</span><span class="sxs-lookup"><span data-stu-id="c8a20-130">Use the Component Tag Helper</span></span>
 
-<span data-ttu-id="f680a-131">ASP.NET Core 3,1 introduit un tag Helper `Component`.</span><span class="sxs-lookup"><span data-stu-id="f680a-131">ASP.NET Core 3.1 introduces a `Component` Tag Helper.</span></span> <span data-ttu-id="f680a-132">Le tag Helper peut remplacer le `RenderComponentAsync<TComponent>` méthode d’assistance HTML dans un projet éblouissant.</span><span class="sxs-lookup"><span data-stu-id="f680a-132">The Tag Helper can replace the `RenderComponentAsync<TComponent>` HTML helper method in a Blazor project.</span></span> <span data-ttu-id="f680a-133">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="f680a-133">For example:</span></span>
+<span data-ttu-id="c8a20-131">ASP.NET Core 3,1 introduit un tag Helper `Component`.</span><span class="sxs-lookup"><span data-stu-id="c8a20-131">ASP.NET Core 3.1 introduces a `Component` Tag Helper.</span></span> <span data-ttu-id="c8a20-132">Le tag Helper peut remplacer le `RenderComponentAsync<TComponent>` méthode d’assistance HTML dans un projet éblouissant.</span><span class="sxs-lookup"><span data-stu-id="c8a20-132">The Tag Helper can replace the `RenderComponentAsync<TComponent>` HTML helper method in a Blazor project.</span></span> <span data-ttu-id="c8a20-133">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="c8a20-133">For example:</span></span>
 
 ```diff
 - @(await Html.RenderComponentAsync<Counter>(RenderMode.ServerPrerendered, new { IncrementAmount = 10 }))
 + <component type="typeof(Counter)" render-mode="ServerPrerendered" param-IncrementAmount="10" />
 ```
 
-<span data-ttu-id="f680a-134">Pour plus d’informations, consultez [intégrer des composants dans des applications Razor pages et MVC](/aspnet/core/blazor/components?view=aspnetcore-3.1#integrate-components-into-razor-pages-and-mvc-apps).</span><span class="sxs-lookup"><span data-stu-id="f680a-134">For more information, see [Integrate components into Razor Pages and MVC apps](/aspnet/core/blazor/components?view=aspnetcore-3.1#integrate-components-into-razor-pages-and-mvc-apps).</span></span>
+<span data-ttu-id="c8a20-134">Pour plus d’informations, consultez [intégrer des composants dans des applications Razor pages et MVC](/aspnet/core/blazor/components?view=aspnetcore-3.1#integrate-components-into-razor-pages-and-mvc-apps).</span><span class="sxs-lookup"><span data-stu-id="c8a20-134">For more information, see [Integrate components into Razor Pages and MVC apps](/aspnet/core/blazor/components?view=aspnetcore-3.1#integrate-components-into-razor-pages-and-mvc-apps).</span></span>
