commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -7,10 +7,10 @@ ms.custom: mvc
 ms.date: 05/28/2019
 uid: migration/21-to-22
 ms.openlocfilehash: ac87d97a259c230c01d236e84d6e42b28adad7e0
-ms.sourcegitcommit: 257cc3fe8c1d61341aa3b07e5bc0fa3d1c1c1d1c
+ms.sourcegitcommit: 2cb857f0de774df421e35289662ba92cfe56ffd1
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 08/19/2019
+ms.lasthandoff: 12/25/2019
 ms.locfileid: "69583564"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer de ASP.NET Core 2,1 à 2,2
@@ -19,7 +19,7 @@ Par [Scott Addie](https://github.com/scottaddie)
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2,1 existant vers ASP.NET Core 2,2.
 
-## <a name="prerequisites"></a>Prérequis
+## <a name="prerequisites"></a>Configuration requise
 
 # <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
@@ -37,13 +37,13 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,1 existant 
 
 ## <a name="update-target-framework-moniker-tfm"></a>Mettre à jour le Moniker du Framework cible
 
-Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks) d’une version supérieure ou égale à .net Core 2,2. Dans le fichier projet, mettez à `<TargetFramework>` jour le texte interne du `netcoreapp2.2`nœud avec:
+Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks) d’une version supérieure ou égale à .net Core 2,2. Dans le fichier projet, mettez à jour le texte interne du nœud `<TargetFramework>` avec `netcoreapp2.2`:
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-Les projets ciblant .NET Framework peuvent continuer à utiliser le TFM d’une version supérieure ou égale à .NET Framework 4.6.1:
+Les projets ciblant .NET Framework peuvent continuer à utiliser le TFM d’une version supérieure ou égale à .NET Framework 4.6.1 :
 
 ```xml
 <TargetFramework>net461</TargetFramework>
@@ -51,7 +51,7 @@ Les projets ciblant .NET Framework peuvent continuer à utiliser le TFM d’une 
 
 ## <a name="adopt-the-iis-in-process-hosting-model"></a>Adopter le modèle d’hébergement in-process IIS
 
-Pour adopter le [modèle d’hébergement in-process pour IIS](xref:host-and-deploy/iis/index#in-process-hosting-model), ajoutez `<AspNetCoreHostingModel>` la propriété `InProcess` avec une `<PropertyGroup>` valeur à dans le fichier projet:
+Pour adopter le [modèle d’hébergement in-process pour IIS](xref:host-and-deploy/iis/index#in-process-hosting-model), ajoutez la propriété `<AspNetCoreHostingModel>` avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
@@ -63,16 +63,16 @@ Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hos
 
 ## <a name="update-a-custom-webconfig-file"></a>Mettre à jour un fichier Web. config personnalisé
 
-Pour les projets qui utilisent un fichier *Web. config* personnalisé dans la racine du projet pour générer leur fichier *Web. config* publié:
+Pour les projets qui utilisent un fichier *Web. config* personnalisé dans la racine du projet pour générer leur fichier *Web. config* publié :
 
-* Dans l' `<handlers>` entrée qui ajoute le module ASP.net Core (`name="aspNetCore"`), remplacez `AspNetCoreModuleV2`la `modules` valeur de l' `AspNetCoreModule` attribut par.
-* Dans l' `<aspNetCore>` élément, ajoutez l’attribut de modèle d'`hostingModel="InProcess"`hébergement ().
+* Dans l’entrée `<handlers>` qui ajoute le module ASP.NET Core (`name="aspNetCore"`), remplacez la valeur de l’attribut `modules` de `AspNetCoreModule` par `AspNetCoreModuleV2`.
+* Dans l’élément `<aspNetCore>`, ajoutez l’attribut de modèle d’hébergement (`hostingModel="InProcess"`).
 
-Pour plus d’informations et pour obtenir des exemples de fichiers <xref:host-and-deploy/aspnet-core-module#configuration-with-webconfig> *Web. config* , consultez.
+Pour plus d’informations et pour obtenir des exemples de fichiers *Web. config* , consultez <xref:host-and-deploy/aspnet-core-module#configuration-with-webconfig>.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
-Si vous ciblez .net Core, supprimez l’attribut `Version` de la référence du package dans le fichier projet. L’inclusion d' `Version` un attribut entraîne l’avertissement suivant:
+Si vous ciblez .NET Core, supprimez l’attribut `Version` de la référence du package dans le fichier projet. L’inclusion d’un attribut `Version` génère l’avertissement suivant :
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
@@ -80,7 +80,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 
 Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.
 
-La référence au package de packages doit ressembler au nœud suivant `<PackageReference />` :
+La référence au package de packages doit ressembler à ce qui suit `<PackageReference />` nœud :
 
 ```xml
 <ItemGroup>
@@ -88,7 +88,7 @@ La référence au package de packages doit ressembler au nœud suivant `<Package
 </ItemGroup>
 ```
 
-Si vous ciblez .NET Framework, mettez à jour `Version` l’attribut de chaque référence de package vers 2.2.0 ou version ultérieure. Voici les références de package dans un projet ASP.NET Core 2,2 ciblant .NET Framework:
+Si vous ciblez .NET Framework, mettez à jour l’attribut `Version` de chaque référence de package vers 2.2.0 ou version ultérieure. Voici les références de package dans un projet ASP.NET Core 2,2 ciblant .NET Framework :
 
 ```xml
 <ItemGroup>
@@ -100,7 +100,7 @@ Si vous ciblez .NET Framework, mettez à jour `Version` l’attribut de chaque r
 </ItemGroup>
 ```
 
-Si vous référencez le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) , `Version` mettez à jour son attribut sur 2.2.0 ou une version ultérieure. Dans le cas contraire, l’erreur suivante se produit:
+Si vous référencez le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) , mettez à jour son attribut `Version` sur 2.2.0 ou une version ultérieure. Dans le cas contraire, l’erreur suivante se produit :
 
 ```console
 Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
@@ -108,7 +108,7 @@ Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
 
-Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à `version` jour sa propriété sur la version 2,2 installée sur votre ordinateur:
+Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour sa propriété `version` sur la version 2,2 installée sur votre ordinateur :
 
 ```json
 {
@@ -120,13 +120,13 @@ Si votre solution repose sur un fichier [global. JSON](/dotnet/core/tools/global
 
 ## <a name="update-launch-settings"></a>Mettre à jour les paramètres de lancement
 
-Si vous utilisez Visual Studio Code, mettez à jour le fichier de paramètres de lancement du projet ( *. vscode/Launch. JSON*). Le `program` chemin d’accès doit référencer le nouvel TFM:
+Si vous utilisez Visual Studio Code, mettez à jour le fichier de paramètres de lancement du projet ( *. vscode/Launch. JSON*). Le chemin d’accès `program` doit référencer le nouvel TFM :
 
 [!code-json[](21-to-22/samples/launch.json?highlight=9)]
 
 ## <a name="update-kestrel-configuration"></a>Mettre à jour la configuration Kestrel
 
-Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans la [méthode CreateWebHostBuilder](xref:fundamentals/host/web-host#set-up-a-host) de la `Program` classe, appelez `ConfigureKestrel` pour configurer Kestrel Server au lieu `UseKestrel` de afin d’éviter les conflits avec [IIS modèle d’hébergement in-process](xref:host-and-deploy/iis/index#in-process-hosting-model):
+Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans la [méthode CreateWebHostBuilder](xref:fundamentals/host/web-host#set-up-a-host) de la classe `Program`, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter les conflits avec le [modèle d’hébergement in-process IIS](xref:host-and-deploy/iis/index#in-process-hosting-model):
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -138,7 +138,7 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-Si l’application n’appelle `CreateDefaultBuilder` pas et ne génère pas l’hôte `Program` manuellement dans la <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> `ConfigureKestrel`classe, appelez **avant** d’appeler:
+Si l’application n’appelle pas `CreateDefaultBuilder` et crée manuellement l’hôte dans la classe `Program`, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** d’appeler `ConfigureKestrel`:
 
 ```csharp
 public static void Main(string[] args)
@@ -162,7 +162,7 @@ Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-us
 
 ## <a name="update-compatibility-version"></a>Mettre à jour la version de compatibilité
 
-Mettez à jour la version `Startup.ConfigureServices` de `Version_2_2`compatibilité dans:
+Mettez à jour la version de compatibilité dans `Startup.ConfigureServices` pour `Version_2_2`:
 
 ```csharp
 services.AddMvc()
@@ -171,16 +171,16 @@ services.AddMvc()
 
 ## <a name="update-cors-policy"></a>Mettre à jour la stratégie CORS
 
-Dans ASP.net Core 2,2, l’intergiciel (middleware) cors répond avec une origine`*`générique () si une stratégie autorise l’origine et autorise les informations d’identification. Les informations d’identification ne sont pas prises en`*`charge lorsqu’une origine générique () est spécifiée, et les navigateurs interdisent la demande cors. Pour plus d’informations, notamment sur les options permettant de corriger le problème sur le client, consultez les [documents Web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).
+Dans ASP.NET Core 2,2, le middleware CORS répond avec une origine générique (`*`) si une stratégie autorise l’origine et autorise les informations d’identification. Les informations d’identification ne sont pas prises en charge lorsqu’une origine de caractères génériques (`*`) est spécifiée, et les navigateurs interdisent la demande CORS. Pour plus d’informations, notamment sur les options permettant de corriger le problème sur le client, consultez les [documents Web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).
 
-Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes:
+Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :
 
-* Modifiez la stratégie CORS de sorte qu’elle n’autorise plus les informations d’identification. Autrement dit, supprimez l’appel <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> à lors de la configuration de la stratégie.
-* Si des informations d’identification sont requises pour que la demande CORS aboutisse, modifiez la stratégie pour spécifier les hôtes autorisés. Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>la place de.
+* Modifiez la stratégie CORS de sorte qu’elle n’autorise plus les informations d’identification. Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.
+* Si des informations d’identification sont requises pour que la demande CORS aboutisse, modifiez la stratégie pour spécifier les hôtes autorisés. Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.
 
 ## <a name="update-docker-images"></a>Mettre à jour les images de l’ancrage
 
-Le tableau suivant montre les modifications apportées aux balises d’image de l’Ancreur:
+Le tableau suivant montre les modifications apportées aux balises d’image de l’Ancreur :
 
 | 2.1                                       | 2.2                                        |
 | ----------------------------------------- | -----------------------------------------  |
@@ -197,11 +197,11 @@ La **génération automatique** de Visual Studio sur l’expérience de requête
 
 Le code de configuration de journalisation recommandée n’est pas passé de 2,1 à 2,2, mais certains modèles de codage 1. x qui fonctionnaient toujours dans 2,1 ne fonctionnent plus en 2,2.
 
-Si votre application enregistre l’initialisation, le filtrage et le chargement de la configuration du `Startup` fournisseur dans la classe, déplacez `Program.Main`ce code vers:
+Si votre application enregistre l’initialisation, le filtrage et le chargement de la configuration du fournisseur dans la classe `Startup`, déplacez ce code vers `Program.Main`:
 
-* Initialisation du fournisseur:
+* Initialisation du fournisseur :
 
-  exemple 1. x:
+  exemple 1. x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -210,7 +210,7 @@ Si votre application enregistre l’initialisation, le filtrage et le chargement
   }
   ```
 
-  2,2 exemple:
+  2,2 exemple :
 
   ```csharp
 
@@ -228,7 +228,7 @@ Si votre application enregistre l’initialisation, le filtrage et le chargement
 
 * Filtrage :
 
-  exemple 1. x:
+  exemple 1. x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -240,7 +240,7 @@ Si votre application enregistre l’initialisation, le filtrage et le chargement
   }
   ```
 
-  2,2 exemple:
+  2,2 exemple :
 
   ```csharp
   public static void Main(string[] args)
@@ -262,9 +262,9 @@ Si votre application enregistre l’initialisation, le filtrage et le chargement
   }
   ```
 
-* Chargement de la configuration:
+* Chargement de la configuration :
 
-  exemple 1. x:
+  exemple 1. x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -273,7 +273,7 @@ Si votre application enregistre l’initialisation, le filtrage et le chargement
   }
   ```
 
-  2,2 exemple:
+  2,2 exemple :
 
   ```csharp
   public static void Main(string[] args)
