--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -8,12 +8,12 @@ ms.date: 11/26/2019
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 364556aed741569adafedd9760ef74af005f0537
-ms.sourcegitcommit: c0b72b344dadea835b0e7943c52463f13ab98dd1
+ms.openlocfilehash: d09bf4488a4746e807057866624f1961ed0545b2
+ms.sourcegitcommit: 2cb857f0de774df421e35289662ba92cfe56ffd1
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/06/2019
-ms.locfileid: "74881190"
+ms.lasthandoff: 12/25/2019
+ms.locfileid: "75355146"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -21,7 +21,7 @@ Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twit
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant vers ASP.NET Core 3,0.
 
-## <a name="prerequisites"></a>Conditions préalables requises
+## <a name="prerequisites"></a>Configuration requise
 
 # <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
@@ -673,7 +673,7 @@ public class MyController : ControllerBase
 }
 ```
 
-#### <a name="authorization"></a>Authorization
+#### <a name="authorization"></a>Autorisation
 
 Dans les versions antérieures de ASP.NET Core, la prise en charge de l’autorisation a été fournie via l’attribut `[Authorize]`. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.NET Core middleware d’autorisation (`UseAuthorization`) immédiatement après `UseAuthentication`. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
@@ -695,7 +695,7 @@ public void Configure(IApplicationBuilder app)
     });
 }
 
-public class HomeController : ControllerBase
+public class HomeController : Controller
 {
     [Authorize]
     public IActionResult BuyWidgets()
@@ -705,7 +705,7 @@ public class HomeController : ControllerBase
 }
 ```
 
-Si l’application utilise un `AuthorizeFilter` en tant que filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie dans l’appel à `AddAuthorization`.
+Lors de l’utilisation du routage de point de terminaison, nous vous recommandons de configurer `<xref:Microsoft.AspNetCore.Mvc.Authorization.AuthorizeFilter>` plutôt que d’utiliser l’intergiciel d’autorisation.  Si l’application utilise un `AuthorizeFilter` en tant que filtre global dans MVC, nous vous recommandons de refactoriser le code pour fournir une stratégie dans l’appel à `AddAuthorization`.
 
 Le `DefaultPolicy` est initialement configuré pour exiger l’authentification, donc aucune configuration supplémentaire n’est requise. Dans l’exemple suivant, les points de terminaison MVC sont marqués comme `RequireAuthorization`, de sorte que toutes les demandes doivent être autorisées en fonction du `DefaultPolicy`. Toutefois, l' `HomeController` autorise l’accès sans que l’utilisateur se connecte à l’application en raison d' `[AllowAnonymous]`:
 
@@ -726,48 +726,23 @@ public void Configure(IApplicationBuilder app)
 }
 
 [AllowAnonymous]
-public class HomeController : ControllerBase
+public class HomeController : Controller
 {
     ...
 }
 ```
 
-Les stratégies peuvent également être personnalisées. En s’appuyant sur l’exemple précédent, le `DefaultPolicy` est configuré pour exiger une authentification et une étendue spécifique :
+### <a name="authorization-for-specific-endpoints"></a>Autorisation pour des points de terminaison spécifiques
 
-```csharp
-public void ConfigureServices(IServiceCollection services)
-{
-    ...
+L’autorisation peut également être configurée pour des classes spécifiques de points de terminaison. Le code suivant est un exemple de conversion d’une application MVC qui a configuré un `AuthorizeFilter` global pour une application avec une stratégie spécifique nécessitant une autorisation :
 
-    services.AddAuthorization(options =>
-    {
-        options.DefaultPolicy = new AuthorizationPolicyBuilder()
-          .RequireAuthenticatedUser()
-          .Build();
-    });
-}
+[!code-csharp[](22-to-30/samples/Startup.cs?name=snippet&highlight=8-9,21-22,26-27,53-54)]
 
-public void Configure(IApplicationBuilder app)
-{
-    ...
+Les stratégies peuvent également être personnalisées. Le `DefaultPolicy` est configuré pour exiger l’authentification :
 
-    app.UseRouting();
+[!code-csharp[](22-to-30/samples/Startup2.cs?name=snippet&highlight=21-26,52)]
 
-    app.UseAuthentication();
-    app.UseAuthorization();
-
-    app.UseEndpoints(endpoints =>
-    {
-        endpoints.MapDefaultControllerRoute().RequireAuthorization();
-    });
-}
-
-[AllowAnonymous]
-public class HomeController : ControllerBase
-{
-    ...
-}
-```
+[!code-csharp[](22-to-30/samples/HomeController.cs?name=snippet)]
 
 Sinon, tous les points de terminaison peuvent être configurés pour exiger une autorisation sans `[Authorize]` ou `RequireAuthorization` en configurant un `FallbackPolicy`. Le `FallbackPolicy` est différent du `DefaultPolicy`. Le `DefaultPolicy` est déclenché par `[Authorize]` ou `RequireAuthorization`, tandis que le `FallbackPolicy` est déclenché quand aucune autre stratégie n’est définie. `FallbackPolicy` est initialement configuré pour autoriser les demandes sans autorisation.
 
@@ -802,7 +777,7 @@ public void Configure(IApplicationBuilder app)
 }
 
 [AllowAnonymous]
-public class HomeController : ControllerBase
+public class HomeController : Controller
 {
     ...
 }
@@ -861,7 +836,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices`:
+Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices` :
 
 ```csharp
 services.AddSignalR(hubOptions =>
@@ -913,7 +888,7 @@ public void Configure(IApplicationBuilder app)
 
 #### <a name="async-suffix-removal-from-controller-action-names"></a>Suppression du suffixe Async des noms d’action du contrôleur
 
-Dans ASP.NET Core 3,0, ASP.NET Core MVC supprime le suffixe `Async` des noms d’action du contrôleur. Le routage et la génération de liens sont affectés par cette nouvelle valeur par défaut. Par exemple :
+Dans ASP.NET Core 3,0, ASP.NET Core MVC supprime le suffixe `Async` des noms d’action du contrôleur. Le routage et la génération de liens sont affectés par cette nouvelle valeur par défaut. Par exemple :
 
 ```csharp
 public class ProductsController : Controller
@@ -929,7 +904,7 @@ public class ProductsController : Controller
 Avant ASP.NET Core 3,0 :
 
 * L’action précédente est accessible à l’itinéraire *Products/ListAsync* .
-* Génération de lien requise spécifiant le suffixe `Async`. Par exemple :
+* Génération de lien requise spécifiant le suffixe `Async`. Par exemple :
 
     ```cshtml
     <a asp-controller="Products" asp-action="ListAsync">List</a>
@@ -938,7 +913,7 @@ Avant ASP.NET Core 3,0 :
 Dans ASP.NET Core 3,0 :
 
 * L’action précédente est accessible à l’itinéraire *Products/List* .
-* La génération de liens ne nécessite pas la spécification du suffixe `Async`. Par exemple :
+* La génération de liens ne nécessite pas la spécification du suffixe `Async`. Par exemple :
 
     ```cshtml
     <a asp-controller="Products" asp-action="List">List</a>
@@ -1040,7 +1015,7 @@ Le code suivant illustre la classe `Program` générée par le modèle ASP.NET C
 La modification la plus importante de `WebHostBuilder` à `HostBuilder` est dans l' [injection de dépendances (di)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez uniquement injecter les éléments suivants dans le constructeur de `Startup`:
 
 * <xref:Microsoft.Extensions.Configuration.IConfiguration>
-* `Microsoft.Extensions.Hosting.IHostEnvironment`
+* <xref:Microsoft.Extensions.Hosting.IHostEnvironment>
 * <xref:Microsoft.AspNetCore.Hosting.IWebHostEnvironment>
 
 Contraintes d’injection de `HostBuilder` :
@@ -1163,7 +1138,7 @@ Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.N
 * La bibliothèque s’appuie sur une fonctionnalité qui a une [modification avec rupture](#breaking-api-changes)binaire.
 * La bibliothèque veut tirer parti des nouvelles fonctionnalités de ASP.NET Core 3,0. 
 
-Par exemple :
+Par exemple :
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
@@ -1193,6 +1168,8 @@ var webRootFileProvider =
 #error unknown target framework
 #endif
 ```
+
+Pour plus d’informations sur l’utilisation d’API ASP.NET Core dans une bibliothèque de classes, consultez <xref:fundamentals/target-aspnetcore>.
 
 ### <a name="publish"></a>Publier
 
