commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -8,12 +8,12 @@ ms.date: 11/26/2019
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: ea8daab4db2f3b9f43dfad786701c6dc4f2852dc
-ms.sourcegitcommit: 7dfe6cc8408ac6a4549c29ca57b0c67ec4baa8de
+ms.openlocfilehash: 76d74e2e0e691405059f5d2b38c0cbe298312b89
+ms.sourcegitcommit: 2388c2a7334ce66b6be3ffbab06dd7923df18f60
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/09/2020
-ms.locfileid: "75829242"
+ms.lasthandoff: 01/14/2020
+ms.locfileid: "75952094"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -158,7 +158,7 @@ Pour afficher la liste complète des packages qui ne sont plus produits, sélect
         <li>Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets</li>
         <li>Microsoft.AspNetCore.Session</li>
         <li>Microsoft. AspNetCore.SignalR</li>
-        <li>Microsoft. AspNetCore.SignalR. Ebauche</li>
+        <li>Microsoft.AspNetCore.SignalR.Ebauche</li>
         <li>Microsoft.AspNetCore.StaticFiles</li>
         <li>Microsoft.AspNetCore.WebSockets</li>
         <li>Microsoft.AspNetCore.WebUtilities</li>
@@ -479,6 +479,10 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
              options.SerializerSettings.ContractResolver =
                 new CamelCasePropertyNamesContractResolver());
   ```
+
+### <a name="systemruntimeserialization-attributes-not-supported"></a>Attributs System. Runtime. Serialization non pris en charge
+
+Les attributs [[DataContract]](xref:System.Runtime.Serialization.DataContractAttribute) et [[DataMember]](xref:System.Runtime.Serialization.DataMemberAttribute) ne sont pas pris en charge dans `System.Text.Json`. Pour plus d’informations, consultez la [prise en charge de System. Text. Json par GitHub dans System. Runtime. Serialization](https://github.com/dotnet/corefx/issues/38758).
 
 ## <a name="mvc-service-registration"></a>Inscription du service MVC
 
@@ -1085,7 +1089,7 @@ new HubConnectionBuilder()
 
 Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas prises en charge dans `System.Text.Json`, vous pouvez revenir à `Newtonsoft.Json`:
 
-1. Installez [Microsoft. AspNetCore.SignalR. Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
+1. Installez [Microsoft.AspNetCore.SignalR.Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
 1. Sur le client, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’instance `HubConnectionBuilder` :
 
     ```csharp
