commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,16 +4,16 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 11/26/2019
+ms.date: 01/13/2020
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 76d74e2e0e691405059f5d2b38c0cbe298312b89
-ms.sourcegitcommit: 2388c2a7334ce66b6be3ffbab06dd7923df18f60
+ms.openlocfilehash: 1ebb08178fc72cd80d505a0c9d29718dd67364b1
+ms.sourcegitcommit: cbd30479f42cbb3385000ef834d9c7d021fd218d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/14/2020
-ms.locfileid: "75952094"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76146470"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -21,7 +21,7 @@ Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twit
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant vers ASP.NET Core 3,0.
 
-## <a name="prerequisites"></a>Configuration requise
+## <a name="prerequisites"></a>Prerequisites
 
 # <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
@@ -272,7 +272,7 @@ Pour continuer à utiliser les fonctionnalités fournies par les assemblys suppr
 
 * La compilation du runtime Razor &ndash; la prise en charge de la compilation des vues et des pages Razor fait désormais partie de [Microsoft. AspNetCore. Mvc. Razor. RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
 
-* La prise en charge de MVC `Newtonsoft.Json` &ndash; la prise en charge de l’utilisation de MVC avec `Newtonsoft.Json` fait désormais partie de [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+* La prise en charge de MVC `Newtonsoft.Json` (Json.NET) &ndash; la prise en charge de l’utilisation de MVC avec `Newtonsoft.Json` fait désormais partie de [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
 
 ## <a name="startup-changes"></a>Modifications au démarrage
 
@@ -440,19 +440,38 @@ Les bibliothèques référençant [Microsoft. AspNetCore. Server. Kestrel. https
 
 Les applications et les bibliothèques qui ciblent ASP.NET Core 2,1 ou version ultérieure doivent supprimer toutes les références directes au package [Microsoft. AspNetCore. Server. Kestrel. https](https://www.nuget.org/packages/Microsoft.AspNetCore.Server.Kestrel.Https) .
 
-## <a name="jsonnet-support"></a>Support Json.NET
+<a id="jsonnet-support"></a>
 
-Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé.
+## <a name="newtonsoftjson-jsonnet-support"></a>Prise en charge de Newtonsoft. JSON (Json.NET)
 
-La valeur par défaut pour ASP.NET Core est désormais [System. Text. JSON](/dotnet/api/system.text.json?view=netcore-3.0), qui est une nouveauté de .net Core 3,0. Envisagez d’utiliser `System.Text.Json` lorsque cela est possible. Elle est très performante et ne nécessite pas de dépendance de bibliothèque supplémentaire. Toutefois, étant donné que `System.Text.Json` est nouveau, il est possible qu’il manque actuellement des fonctionnalités dont votre application a besoin.
+Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Newtonsoft. JSON (JSON.net)](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.net core.
 
-Votre application peut nécessiter une intégration `Newtonsoft.Json` si elle utilise des fonctionnalités spécifiques à `Newtonsoft.Json`telles que JsonPatch ou Converters, ou si elle [met en forme](xref:web-api/advanced/formatting) des types spécifiques à `Newtonsoft.Json`.
+Le sérialiseur JSON par défaut pour ASP.NET Core est désormais <xref:System.Text.Json>, qui est une nouveauté de .NET Core 3,0. Envisagez d’utiliser `System.Text.Json` lorsque cela est possible. Elle est très performante et ne nécessite pas de dépendance de bibliothèque supplémentaire. Toutefois, étant donné que `System.Text.Json` est nouveau, il est possible qu’il manque actuellement des fonctionnalités dont votre application a besoin. Pour plus d’informations, consultez [Comment migrer de Newtonsoft. JSON vers System. Text. JSON](/dotnet/standard/serialization/system-text-json-migrate-from-newtonsoft-how-to).
 
-Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 SignalR, consultez [basculer vers Newtonsoft. JSON](#switch-to-newtonsoftjson) dans ce document.
+### <a name="use-newtonsoftjson-in-an-aspnet-core-30-opno-locsignalr-project"></a>Utiliser Newtonsoft. JSON dans un projet ASP.NET Core 3,0 SignalR
 
-Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
+* Installez [Microsoft.AspNetCore.SignalR.Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
 
-* Ajoutez une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+* Sur le client, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’instance `HubConnectionBuilder` :
+
+  ```csharp
+  new HubConnectionBuilder()
+      .WithUrl("/chatHub")
+      .AddNewtonsoftJsonProtocol(...)
+      .Build();
+  ```
+
+* Sur le serveur, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’appel de méthode `AddSignalR` dans `Startup.ConfigureServices`:
+
+  ```csharp
+  services.AddSignalR()
+      .AddNewtonsoftJsonProtocol(...);
+  ```
+
+### <a name="use-newtonsoftjson-in-an-aspnet-core-30-mvc-project"></a>Utiliser Newtonsoft. JSON dans un projet MVC ASP.NET Core 3,0
+
+* Installez le package [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) .
+
 * Mettez à jour `Startup.ConfigureServices` pour appeler `AddNewtonsoftJson`.
 
   ```csharp
@@ -471,7 +490,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
       .AddNewtonsoftJson();
   ```
 
-  Les paramètres Json.NET peuvent être définis dans l’appel à `AddNewtonsoftJson`:
+  `Newtonsoft.Json` paramètres peuvent être définis dans l’appel à `AddNewtonsoftJson`:
 
   ```csharp
   services.AddMvc()
@@ -480,9 +499,7 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
                 new CamelCasePropertyNamesContractResolver());
   ```
 
-### <a name="systemruntimeserialization-attributes-not-supported"></a>Attributs System. Runtime. Serialization non pris en charge
-
-Les attributs [[DataContract]](xref:System.Runtime.Serialization.DataContractAttribute) et [[DataMember]](xref:System.Runtime.Serialization.DataMemberAttribute) ne sont pas pris en charge dans `System.Text.Json`. Pour plus d’informations, consultez la [prise en charge de System. Text. Json par GitHub dans System. Runtime. Serialization](https://github.com/dotnet/corefx/issues/38758).
+**Remarque :** Si la méthode `AddNewtonsoftJson` n’est pas disponible, assurez-vous que vous avez installé le package [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) . Une erreur courante consiste à installer le package [Newtonsoft. JSON](https://www.nuget.org/packages/Newtonsoft.Json/) au lieu du package [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) .
 
 ## <a name="mvc-service-registration"></a>Inscription du service MVC
 
@@ -1087,24 +1104,7 @@ new HubConnectionBuilder()
 
 ### <a name="switch-to-newtonsoftjson"></a>Basculer vers Newtonsoft. JSON
 
-Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas prises en charge dans `System.Text.Json`, vous pouvez revenir à `Newtonsoft.Json`:
-
-1. Installez [Microsoft.AspNetCore.SignalR.Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
-1. Sur le client, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’instance `HubConnectionBuilder` :
-
-    ```csharp
-    new HubConnectionBuilder()
-        .WithUrl("/chatHub")
-        .AddNewtonsoftJsonProtocol(...)
-        .Build();
-    ```
-
-1. Sur le serveur, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’appel de méthode `AddSignalR` dans `Startup.ConfigureServices`:
-
-    ```csharp
-    services.AddSignalR()
-        .AddNewtonsoftJsonProtocol(...);
-    ```
+Si vous utilisez [des fonctionnalités de Newtonsoft. JSON qui ne sont pas prises en charge dans System. Text. JSON](/dotnet/standard/serialization/system-text-json-migrate-from-newtonsoft-how-to), vous pouvez revenir à `Newtonsoft.Json`. Consultez [utiliser Newtonsoft. JSON dans un projet ASP.NET Core 3,0 SignalR](#use-newtonsoftjson-in-an-aspnet-core-30-signalr-project) plus haut dans cet article.
 
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
