--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -8,12 +8,12 @@ ms.date: 01/13/2020
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 1ebb08178fc72cd80d505a0c9d29718dd67364b1
-ms.sourcegitcommit: cbd30479f42cbb3385000ef834d9c7d021fd218d
+ms.openlocfilehash: 346e276fba53c895e7f76bcd865b09e0e0cabfae
+ms.sourcegitcommit: f259889044d1fc0f0c7e3882df0008157ced4915
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/16/2020
-ms.locfileid: "76146470"
+ms.lasthandoff: 01/18/2020
+ms.locfileid: "76268735"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -1174,6 +1174,10 @@ var webRootFileProvider =
 ```
 
 Pour plus d’informations sur l’utilisation d’API ASP.NET Core dans une bibliothèque de classes, consultez <xref:fundamentals/target-aspnetcore>.
+
+## <a name="miscellaneous-changes"></a>Modifications diverses
+
+Le système de validation dans .NET Core 3,0 et versions ultérieures traite les paramètres non Nullable ou les propriétés liées comme s’ils avaient un attribut `[Required]`. Pour plus d’informations, consultez [attribut [required]](xref:mvc/models/validation?view=aspnetcore-3.1#required-attribute).
 
 ### <a name="publish"></a>Publier
 
