commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,16 +4,16 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 01/13/2020
+ms.date: 01/21/2020
 no-loc:
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 346e276fba53c895e7f76bcd865b09e0e0cabfae
-ms.sourcegitcommit: f259889044d1fc0f0c7e3882df0008157ced4915
+ms.openlocfilehash: 142ef4ed7776a213fec6528839555001436ebda3
+ms.sourcegitcommit: eca76bd065eb94386165a0269f1e95092f23fa58
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/18/2020
-ms.locfileid: "76268735"
+ms.lasthandoff: 01/24/2020
+ms.locfileid: "76727181"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -158,7 +158,7 @@ Pour afficher la liste complète des packages qui ne sont plus produits, sélect
         <li>Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets</li>
         <li>Microsoft.AspNetCore.Session</li>
         <li>Microsoft. AspNetCore.SignalR</li>
-        <li>Microsoft.AspNetCore.SignalR.Ebauche</li>
+        <li>Microsoft. AspNetCore.SignalR. Ebauche</li>
         <li>Microsoft.AspNetCore.StaticFiles</li>
         <li>Microsoft.AspNetCore.WebSockets</li>
         <li>Microsoft.AspNetCore.WebUtilities</li>
@@ -450,7 +450,7 @@ Le sérialiseur JSON par défaut pour ASP.NET Core est désormais <xref:System.T
 
 ### <a name="use-newtonsoftjson-in-an-aspnet-core-30-opno-locsignalr-project"></a>Utiliser Newtonsoft. JSON dans un projet ASP.NET Core 3,0 SignalR
 
-* Installez [Microsoft.AspNetCore.SignalR.Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
+* Installez [Microsoft. AspNetCore.SignalR. Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
 
 * Sur le client, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’instance `HubConnectionBuilder` :
 
@@ -857,7 +857,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices` :
+Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices`:
 
 ```csharp
 services.AddSignalR(hubOptions =>
@@ -1105,6 +1105,10 @@ new HubConnectionBuilder()
 ### <a name="switch-to-newtonsoftjson"></a>Basculer vers Newtonsoft. JSON
 
 Si vous utilisez [des fonctionnalités de Newtonsoft. JSON qui ne sont pas prises en charge dans System. Text. JSON](/dotnet/standard/serialization/system-text-json-migrate-from-newtonsoft-how-to), vous pouvez revenir à `Newtonsoft.Json`. Consultez [utiliser Newtonsoft. JSON dans un projet ASP.NET Core 3,0 SignalR](#use-newtonsoftjson-in-an-aspnet-core-30-signalr-project) plus haut dans cet article.
+
+## <a name="redis-distributed-caches"></a>Caches distribués ReDim
+
+Le package [Microsoft. extensions. Caching. redims](https://www.nuget.org/packages/Microsoft.Extensions.Caching.Redis) n’est pas disponible pour les applications ASP.net Core 3,0 ou versions ultérieures. Remplacez la référence de package par [Microsoft. extensions. Caching. StackExchangeRedis](https://www.nuget.org/packages/Microsoft.Extensions.Caching.StackExchangeRedis). Pour plus d'informations, consultez <xref:performance/caching/distributed>.
 
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
